빼먹은 것 추가

--- a/package.yaml
+++ b/package.yaml
@@ -21,10 +21,15 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
-- transformers
 - mtl
-- monad-logger
+- transformers
+- time
 - text
+- ulid
+- generic-lens
+- lens
+- errors
+- stm
 
 ghc-options:
 - -Wall
