--- a/workshop.cabal
+++ b/workshop.cabal
@@ -25,7 +25,6 @@ source-repository head
 
 library
   exposed-modules:
-      Example
       Lib
   other-modules:
       Paths_workshop
@@ -36,10 +35,15 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
-    , monad-logger
+    , errors
+    , generic-lens
+    , lens
     , mtl
+    , stm
     , text
+    , time
     , transformers
+    , ulid
   default-language: Haskell2010
 
 executable workshop-exe
@@ -53,10 +57,15 @@ executable workshop-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , monad-logger
+    , errors
+    , generic-lens
+    , lens
     , mtl
+    , stm
     , text
+    , time
     , transformers
+    , ulid
     , workshop
   default-language: Haskell2010
 
@@ -72,9 +81,14 @@ test-suite workshop-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , monad-logger
+    , errors
+    , generic-lens
+    , lens
     , mtl
+    , stm
     , text
+    , time
     , transformers
+    , ulid
     , workshop
   default-language: Haskell2010
