--- a/todoapp07/package.yaml
+++ b/todoapp07/package.yaml
@@ -33,6 +33,11 @@ dependencies:
 - postgresql-simple
 - resource-pool
 - relude
+- aeson
+- wai
+- http-types
+- unliftio
+- scotty
 
 default-extensions:
 - OverloadedStrings
